<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="registeredUser"
            type="com.nishant.bloodbank2.dataClass.RegisteredUser" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".userDashboardActivity">

        <ImageView
            android:id="@+id/img_profilePicture"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/profile_picture"
            android:src="@color/colorPrimary" />

        <ImageButton
            android:id="@+id/btn_menu"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/menu"
            android:onClick="showMenu"
            android:src="@drawable/menu" />

        <ImageView
            android:id="@+id/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:clickable="true"
            android:visibility="invisible"
            android:contentDescription="@string/registration_button"
            android:focusable="true"
            android:src="@drawable/search_donor" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:visibility="invisible"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="20dp"
            app:contentPaddingBottom="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/textSize"
                    android:textColor="@color/textColor"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kg"
                    android:textColor="@color/textColor"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/txt_weight"
                    app:layout_constraintStart_toStartOf="@+id/txt_weight"
                    app:layout_constraintTop_toBottomOf="@+id/txt_weight" />

                <TextView
                    android:id="@+id/txt_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@{registeredUser.name}"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toStartOf="@+id/txt_bloodGroup"
                    app:layout_constraintStart_toEndOf="@+id/txt_weight"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_bloodGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="25dp"
                    android:text="@{registeredUser.bloodGroup}"
                    android:textColor="@color/textColor"
                    android:textSize="35sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_line1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/line"
                    android:src="@drawable/line_horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_userName" />

                <ImageView
                    android:id="@+id/img_addressIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:contentDescription="@string/line"
                    android:src="@drawable/apartment_24px"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_line1" />

                <TextView
                    android:id="@+id/txt_userAddress"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="start"
                    android:maxLines="4"
                    android:singleLine="false"
                    android:text="@{registeredUser.address}"
                    app:layout_constraintStart_toEndOf="@+id/img_addressIcon"
                    app:layout_constraintTop_toTopOf="@+id/img_addressIcon" />


                <ImageView
                    android:id="@+id/img_emailIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:contentDescription="@string/e_mail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_line2"
                    app:srcCompat="@drawable/email_24px" />

                <ImageView
                    android:id="@+id/img_line2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_userAddress"
                    app:srcCompat="@drawable/line_horizontal" />

                <TextView
                    android:id="@+id/txt_userEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{registeredUser.email}"
                    app:layout_constraintBottom_toBottomOf="@+id/img_emailIcon"
                    app:layout_constraintStart_toEndOf="@+id/img_emailIcon"
                    app:layout_constraintTop_toTopOf="@+id/img_emailIcon" />

                <ImageView
                    android:id="@+id/img_line3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_emailIcon"
                    app:srcCompat="@drawable/line_horizontal" />

                <ImageView
                    android:id="@+id/img_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:contentDescription="@string/icon_phone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_line3"
                    app:srcCompat="@drawable/call_24px" />

                <TextView
                    android:id="@+id/txt_userPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{registeredUser.mobile}"
                    app:layout_constraintBottom_toBottomOf="@+id/img_call"
                    app:layout_constraintStart_toEndOf="@+id/img_call"
                    app:layout_constraintTop_toTopOf="@+id/img_call" />

                <ImageView
                    android:id="@+id/img_editProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/edit_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_line3"
                    app:srcCompat="@drawable/edit_24px" />

                <TextView
                    android:id="@+id/txt_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:text="@string/edit_profile"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_editProfile"
                    app:layout_constraintEnd_toStartOf="@+id/img_editProfile"
                    app:layout_constraintTop_toTopOf="@+id/img_editProfile" />

                <ImageView
                    android:id="@+id/img_line4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/line"
                    app:layout_constraintEnd_toStartOf="@+id/txt_edit"
                    app:layout_constraintStart_toEndOf="@+id/txt_userPhone"
                    app:layout_constraintTop_toBottomOf="@+id/img_line3"
                    app:srcCompat="@drawable/stand_line" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="200dp"
            android:clickable="true"
            android:contentDescription="@string/search_button"
            android:focusable="true"
            android:src="@drawable/search_donor" />

    </FrameLayout>
</layout>